[workspace]
members = [
    "crates/accum",
    "crates/pcd",
    "crates/tx",
    "crates/sync",
    "crates/syncd",
    "crates/agg",
    "crates/keys",
    "crates/node",
    "crates/ragu-lite",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
hex = "0.4"
rand_core = "0.6"
ff = "0.13"
group = "0.13"
blake2b_simd = "1"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","sync","time"] }
axum = "0.7"
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
rocksdb = "0.22"
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
pasta_curves = "0.5"
reddsa = "0.5"
zcash_address = "0.4"
zcash_primitives = "0.14"
zcash_client_backend = "0.13"
