[package]
name = "accum"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
halo2_proofs = { workspace = true }
halo2_gadgets = { workspace = true }
pasta_curves = { workspace = true }
blake2b_simd = { workspace = true }
rayon = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
serde_json = { workspace = true }
