[package]
name = "ragu-lite"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "R1CS-like driver, Maybe<T>, PCD skeleton, split accumulation, and a PCD wallet prototype over the Pasta cycle for Tachyon."

[dependencies]
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"
subtle = "2.4.1"
blake3 = "1.5"
rand_core = "0.6"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
hex = "0.4"


